--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="isen.fr.myfridgerecipes">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,8 @@
         </activity>
         <activity android:name=".ScannerActivity" />
         <activity android:name=".FridgeActivity" />
-        <activity android:name=".ManualActivity"></activity>
+        <activity android:name=".ManualActivity" />
+        <activity android:name=".RecipeActivity" />
     </application>
 
 </manifest>
